refactor: Restore PedidoResumoModel and add pageable translations